# Monomoy

./: .coveragerc  .eslintignore  .gitignore  .prettierrc  .pylintrc  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  monomoy.json  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  tsconfig.json  webpack.config.js
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: bike-dictionary.csv  bike-hour.csv  bike-rentals-regression.ipynb  churn-classification.ipynb  churn-dictionary.csv  churn.csv
examples/ames/: AmesHousingPreprocessedTest.csv  AmesHousingPreprocessedTrain.csv  README.md  ames-dictionary.csv  ames_model.json  calculate.ipynb  dataset_preprocessing.ipynb  modeling.ipynb  widget.ipynb
monomoy/: __init__.py  _frontend.py  _version.py  data.py  metadata.py  widget.py
monomoy/nbextension/: extension.js
monomoy/tests/: data_dict.csv  test_data.py
src/: Widget.svelte  drawing.ts  extension.ts  plugin.ts  stores.ts  types.ts  utils.ts  vis-utils.ts  widget.ts  workflows.ts
src/components/: ConstraintICE.svelte  ConstraintsDescriptions.svelte  DrawingFeedbackPage.svelte  DrawingMultiple.svelte  DrawingPDP.svelte  DrawingPage.svelte  FeatureSelectionPage.svelte  FeedbackPDP.svelte  IntroductionPage.svelte  Label.svelte  Progress.svelte  ScatterPlot.svelte  SegmentedButton.svelte  Sparkline.svelte  Widget.svelte  XAxis.svelte  YAxis.svelte
src/pages/: ConstraintsFeedbackPage.svelte  ConstraintsSelectionPage.svelte  DrawingFeedbackPage.svelte  DrawingPage.svelte  FeatureImportanceFeedbackPage.svelte  FeatureImportanceSelectionPage.svelte  InteractionsFeedbackPage.svelte  InteractionsSelectionPage.svelte  IntroductionPage.svelte  SavePage.svelte  TransitionPage.svelte
src/tests/: example.test.ts
